[project]
name = "lmupi"
version = "0.1.0"
description = "Telemetry parser and explorer for Le Mans Ultimate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "lz4>=4.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pyside6>=6.10.2",
    "scipy>=1.17.1",
    "zstandard>=0.22.0",
]

[project.scripts]
lmupi = "lmupi.app:run"
