[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside6-test-ui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8",
    "httpx>=0.28",
]

[project.scripts]
telemu-test-ui = "main:main"

[tool.setuptools]
py-modules = ["main"]
